2005-09-14  Lillian Angel  <langel@redhat.com>

	* javax/swing/JProgressBar.java
	(JProgressBar): Fixed to use setOrientation function.
	* javax/swing/plaf/metal/MetalProgressBarUI.java
	(createUI): Was using the same instance of the UI for 
	each new JProgressBar. Fixed this.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(installUI): Added call to prepareForUIInstall.
	(uninstallUI): Added call to prepareForUIUninstall.

2005-09-14  Anthony Balkisoon  <abalkiss@redhat.com>

	* javax/swing/text/ComponentView.java:
	(createComponent): Implemented.

2005-09-14    Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/CosNaming/NameComponent (hashCode): New method. 

2005-09-14  Lillian Angel  <langel@redhat.com>
	
	Fixes Bug #23795
	* javax/swing/plaf/basic/BasicTreeUI.java:
	Made private fields package private.
	(setCellRenderer): Took out code that updateRenderer takes
	care of.
	(getPathBounds): Fixed to use treeModel field.
	(getPathForRow): Likewise.
	(getRowCount): Likewise.
	(installComponents): Implemented.
	(createNodeDimensions): Implemented.
	(uninstallComponents): Implemented.
	(getVerticalLegBuffer): Implemented.
	(getHorizontalLegBuffer): Implemented.
	(updateLayoutCacheExpandedNodes): Implemented.
	(updateExpandedDescendants): Implemented.
	(updateDepthOffset): Implemented.
	(updateRenderer): Implemented.
	(updateSize): Implemented.
	(installDefaults): Added some more defaults.
	(installUI): Moved code to installComponents.
	(paint): Fixed to use treeModel field.
	(ensureRowsAreVisible): Implemented.
	(getMinimumSize): Implemented.
	(getMaximumSize): Implemented.
	(checkForClickInExpandControl): Implemented.
	(isLocationInExpandControl): Implemented.
	(handleExpandControlClick): Implemented.
	(toggleExpandState): Implemented.
	(isToggleSelectionEvent): Implemented.
	(isMultiSelectEvent): Implemented.
	(isToggleEvent): Implemented.
	(selectPathForEvent): Implemented.
	(actionPerformed): Changed to use toggleExpandState.