@@ -99,6 +99,15 @@ public class Version
     Version that = (Version) other;
     return same(that);
   }
+  
+  /**
+   * Get the hashcode, higher 8 bits being the major version and lower 8 bits
+   * the minor version.
+   */
+  public int hashCode()
+  {
+    return major << 8 | minor;
+  }    
 
   /**
    * Read from the input stream, major number first.
@@ -203,4 +212,5 @@ public class Version
         throw new MARSHAL("IOException while writing message header");
       }
   }
+ 
 }
